--- a/Instagram/notification.css
+++ b/Instagram/notification.css
@@ -39,7 +39,6 @@
 }
 
 
-
 .notification ul li button{
     width: 70px;
     height: 25px;
@@ -54,3 +53,8 @@
     z-index: 9999; /* Bring it to front */
 }
 
+@media screen and (max-width:900px) {
+    .notification{
+        width: 100%;
+    }
+}
