--- a/Instagram/style.css
+++ b/Instagram/style.css
@@ -374,3 +374,70 @@ main{
     color: lightgray;
     display: block;
 }
+
+@media screen  and (max-width:900px) {
+    main{
+        display: inherit;
+        height: 100vh;
+        position: relative;
+    }
+
+    .left-sidebar{
+        height: fit-content;
+    }
+
+    .left-sidebar .left-sidebar-space{
+        bottom: 0;
+        display: flex;
+        width: 100%;
+        height: 70px;
+        padding: 5px 5%;
+        border-right: 0;
+        border-top: 1px solid var(--color);
+        z-index: 1000;
+        background-color: var(--bg-toggle);
+    }
+
+    .left-sidebar .left-sidebar-space ul{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .left-sidebar .left-sidebar-space ul li{
+        margin-bottom: 0;
+        padding-left: 0;
+        position: relative;
+        width: 50px;
+    }
+
+    .left-sidebar .left-sidebar-space ul li img{
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+    }
+
+    .left-sidebar .left-sidebar-space .switchappearance{
+        display: none;
+    }
+
+    .left-sidebar p,.left-sidebar-space > img,.menu-bar{
+        display: none;
+    }
+}
+
+@media screen  and (max-width:900px){
+    .main-content{
+        width: 100%;
+        padding: 10px 20px;
+    }
+
+    .right-sidebar{
+        display: none;
+    }
+
+    .main-content .post-moment{
+        padding: 0;
+    }
+}
